# k8s-1m

./: .cursorignore  .gitignore  .gitmodules  README.adoc  RUNNING.adoc
.doc/: Gemfile  docinfo-footer.html  docinfo.html
.github/workflows/: asciidoctor-ghpages.yml
apiserver-stress/: Cargo.toml  README.md
apiserver-stress/src/: main.rs
dist-scheduler/: .dockerignore  .gitignore  Dockerfile  Makefile  deployment.yaml  go.mod  go.sum
dist-scheduler/proto/: pod.proto
doc_images/kubelet_v_kwok/: regions.csv  regions.sh
etcd-lease-flood/: .gitignore  go.mod  go.sum  main.go
grafana-dashboard/: README  dashboard.json
kwok/: count_ready.sh  find-gaps.sh  install.sh  kwok-controller.yaml
kwok/delete_pods/: .gitignore  go.mod  main.go
kwok/make_nodes/: .gitignore  go.mod  main.go
kwok/make_pods/: .gitignore  go.mod  go.sum  main.go
kwok/test_manifests/: daemonset.yaml
terraform/: .gitignore  .terraform.lock.hcl  reset-tf.sh
terraform/cost_calculator/: calc_gcp_cost.py  requirements.txt
terraform/ipv4-gateway/: .terraform.lock.hcl
terraform/k8s-server/: .terraform.lock.hcl
terraform/kubernetes/: vmagent-scrape.yaml.tftpl
terraform/tfvars/: 16-gcp-c4d.tfvars  16-gcp.tfvars  16.tfvars  256-gcp.tfvars  256.tfvars  32.tfvars  4-gcp.tfvars  512-gcp-c4d.tfvars  512-gcp.tfvars  64.tfvars  8.tfvars  cilium-test.tfvars  etcd-test.tfvars  gcp-kubelet-pod.tfvars  kwok-1m-gcp.tfvars  large.tfvars  medium-vultr.tfvars  no-sched.tfvars  single-high.tfvars  small-aws-arm.tfvars  small-aws-fleet.tfvars  small-aws.tfvars  small-gcp-arm.tfvars  small-gcp.tfvars
(+21 files in other folders)
