[package]
name = "apiserver-stress"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
k8s-openapi = { version = "0.21.0", features = ["v1_28"] }
kube = { version = "0.90.0", features = ["runtime", "client"] }
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.13"
chrono = "0.4"
futures = "0.3"
